@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4429 2004/01/11 23:07:58 grant Exp $
+$NetBSD: CHANGES,v 1.4430 2004/01/12 03:33:38 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -184,3 +184,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Moved tcsh-standalone to standalone-tcsh [grant 2004-01-11]
 	Moved bash2-static to static-bash2 [grant 2004-01-11]
 	Moved ast-ksh-static to static-ast-ksh [grant 2004-01-11]
+	Updated samba to 3.0.1nb1 [jlam 2004-01-12]
